GNOME Bugzilla – Bug 655126
Gnome terminal has poor error message when passed a bad filename
Last modified: 2012-05-03 19:07:07 UTC
When I try to load a gnome terminal session the program terminates immediately with a poor error message when the config file is not found. I took me a while to debug what was going on. The error message is this: marc@rodimus ~ $ gnome-terminal --load-config=marc Failed to forward arguments: GDBus.Error:org.gtk.GDBus.UnmappedGError.Quark._g_2dfile_2derror_2dquark.Code4: No such file or directory gnome-terminal --version GNOME Terminal 2.32.1
Edit poo => poor (unfortunate typo!)
Hmm. This is because this error domain isn't registered with gdbus. IMHO gdbus should register all gio error domains, or gio should expose a function doing so. -> gio
(In reply to comment #2) > Hmm. This is because this error domain isn't registered with gdbus. IMHO gdbus > should register all gio error domains, or gio should expose a function doing > so. -> gio No. We already provide transparent GError support without registering errors, see http://developer.gnome.org/gio/unstable/GDBusError.html#GDBusError.description The problem is that you are not using it right - in particular you need to use g_dbus_error_strip_remote_error() before presenting any GError set by a GDBus routine.
Oh, ok. Thanks for the hint!
Fixed on master.