client: Give better error messages

Strip remote errors first.

https://bugzilla.gnome.org/show_bug.cgi?id=655126